--- a/ESTILOS/Home.css
+++ b/ESTILOS/Home.css
@@ -1,14 +1,39 @@
-header{
-    background-color:#f4906c;
-}
-li{
-    background-color: #d9d9d9;
-    flex-wrap: wrap;
-    flex-direction: space-around;
-    align-content: center;
+@import url(../ESTILOS/Root.css);
 
+header{
+    background:var(  --background-colorsecundario);
+    display: flex;
+    justify-content: space-between;
+}
+.fotoheader{
+    width: 32vw;
+}
+.nav{
+    background: var( --background-colorprimario);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px 50px;
+}
+.li{
+    background-color: rgba(217, 217, 217, 30%);
+    list-style-type: none;
+    padding: 18px 52px;
+    border-radius: 32px;
+}
+.link{
+    color: #000000;
+    font-size:1.1rem;
+    cursor:pointer;
+    text-decoration: none;
 }
 #fondo{
     width: 100%;
     height: 100%;
+}
+
+h1{
+    text-align: center;
+    font-size:4rem;
+    background: var( --background-colorprimario);
 }
